--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -254,7 +254,7 @@
         padding: 10px 15px;
         border: 0;
         border-radius: 5px;
-        background-color: #ea1e30;
+        background-color: #12a7a5;
         -webkit-font-smoothing: antialiased;
         outline: 0;
 
